updated smart panel page

--- a/Task3/styles.css
+++ b/Task3/styles.css
@@ -66,7 +66,7 @@
         .you-can-shape-container{
 
         	background-color:pink;
-        	background-image: url("exact.jpg");    	  
+        	background-image: url("C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/exact.jpg");    	  
             background-size: cover;
 			height: 550px;
 			width: 1390px;
